2012-10-31  Gerald Pfeifer  <gerald@pfeifer.com>

	* papers/nosb.html: Remove reference to sources.redhat.com.

2012-10-31  Gerald Pfeifer  <gerald@pfeifer.com>

	* libgcj-platforms.html: Remove.

2012-10-28  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Update reference to rhug (and consolidate links).

2012-10-28  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* build-snapshot.html: Refer to GNU/Linux, simplify link to
	installation documentation, remove reference to an old FAQ,
	some editorial changes.
			 
2012-10-27  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* done.html: Adjust URL for rhug.
	Properly encode a special character.

2012-10-27  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html (My program seems to hang): Remove.

2012-10-21  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html (My libgcj build fails with "invalid use of undefined
	type struct sigcontext_struct"): Remove.

2012-10-21  Gerald Pfeifer  <gerald@pfeifer.com>

	* news.html: Replace references to sources.redhat.com by
	sourceware.org.
	Avoid a reference to CVS.
	Some style adjustments to the February 8, 2001 entry.

2011-11-01  Gerald Pfeifer  <gerald@pfeifer.com>

	* status.html: Use <h2> instead of fake tables.

2011-10-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* build-snapshot.html: Adjust title to not refer to CVS any more.
	Adjust formatting of title.
	Change link from CVS instructions to SVN.

2011-10-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* done.html: Use <th> for the header.

2011-05-15  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html:  Use <h2>, not fake tables for section headers.

2011-05-13  Gerald Pfeifer  <gerald@pfeifer.com>

	* docs.html: Use regular <h2> markup for section headers.

2011-05-13  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* projects.html: Update name of java mailing list.
	(Plugin for Mozilla): Remove section.
	(Compiler Improvements): Remove tree inlining item.
	(Benchmark infrastructure): Remove reference to jMocha.
