@@ -39,11 +39,6 @@ you should not (yet) rely on their correctness for security.</li>
 
 <h2 id="packages">Implemented Packages</h2>
 
-<p>You can also see <a href="http://www.kaffe.org/~stuart/japi/">a
-comparison of libgcj with the JDK</a>.  This is updated nightly.  It
-is run against the cvs trunk, and includes GNU Crypto in its analysis.
-This is the most up-to-date analysis of API differences.  </p>
-
 <dl>
 <dt class="package">java.applet</dt>
 <dd>Believed to be complete, but note that without a functional AWT
