@@ -1,3 +1,7 @@
+2012-11-01  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* status.html: Remove comparison with Kaffe.
+
 2012-10-31  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* papers/nosb.html: Remove reference to sources.redhat.com.
